threw out compass and added in bourbon changed gruntfile accordingly
Signed-off-by: Nils Borchers <nils.borchers@sumup.com>

--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "jquery": "~1.10.2"
+    "jquery": "~1.10.2",
+    "bourbon": "~4.0.1",
+    "neat": "~1.6.0"
   },
   "devDependencies": {}
 }
