--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.7.0",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-connect": "~0.5.0",
@@ -25,7 +24,8 @@
     "grunt-concurrent": "~0.4.0",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-sass": "~0.7.3"
   },
   "engines": {
     "node": ">=0.8.0"
