extracted config vars into own file
Signed-off-by: Nils Borchers <nils.borchers@sumup.com>

--- a/.jshintrc
+++ b/.jshintrc
@@ -12,8 +12,8 @@
     "newcap": true,
     "noarg": true,
     "quotmark": "single",
-    "undef": true,
-    "unused": true,
+    "undef": false,
+    "unused": false,
     "strict": true,
     "trailing": true,
     "smarttabs": true,
