--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "picture ocean",
-  "version": "1.0",
+  "name": "photo_ocean",
+  "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
